chore: add basic config validations

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+# local / production / staging
+APP_ENV=local
+APP_DEBUG=true
 APP_URL=localhost
 SUPPORT_EMAIL=support@${APP_URL}
 PORT=5000
@@ -7,6 +10,9 @@ DATABASE_PORT=5432
 DATABASE_USER=psqlroot
 DATABASE_PASSWORD=password
 DATABASE_NAME=nest_experiment
+
+TYPEORM_SYNCHRONIZE=true
+TYPEORM_LOGGING=true
 
 JWT_SECRET=fa420ba16c67af32d47d2bb8ac01a77d
 JWT_EXPIRATION_TIME=604800
