feat: add refresh token support in jwt

--- a/.env.example
+++ b/.env.example
@@ -14,5 +14,12 @@ DATABASE_NAME=nest_experiment
 TYPEORM_SYNCHRONIZE=true
 TYPEORM_LOGGING=true
 
-JWT_SECRET=fa420ba16c67af32d47d2bb8ac01a77d
-JWT_EXPIRATION_TIME=604800
+JWT_ACCESS_TOKEN_SECRET=fa420ba16c67af32d47d2bb8ac01a77d
+JWT_ACCESS_TOKEN_EXPIRATION_TIME=900
+JWT_REFRESH_TOKEN_SECRET=da420ba16e69af32d47d2dd8ac01a77d
+JWT_REFRESH_TOKEN_EXPIRATION_TIME=28800
+
+AWS_REGION=
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_PUBLIC_BUCKET_NAME=
