feat: server file upload

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,8 @@ JWT_ACCESS_TOKEN_EXPIRATION_TIME=900
 JWT_REFRESH_TOKEN_SECRET=da420ba16e69af32d47d2dd8ac01a77d
 JWT_REFRESH_TOKEN_EXPIRATION_TIME=28800
 
+UPLOADED_FILES_DESTINATION=./uploadedFiles
+
 AWS_REGION=
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
