feat: add two factor authentication

--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,5 @@ AWS_REGION=
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_PUBLIC_BUCKET_NAME=
+
+TWO_FACTOR_AUTHENTICATION_APP_NAME=Next_Starter_Template
