--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,7 @@ JWT_ACCESS_TOKEN_EXPIRATION_TIME=900
 JWT_REFRESH_TOKEN_SECRET=da420ba16e69af32d47d2dd8ac01a77d
 JWT_REFRESH_TOKEN_EXPIRATION_TIME=28800
 
+EMAIL_CONFIRMATION_URL=https://my-app.com/confirm-email
 UPLOADED_FILES_DESTINATION=./uploadedFiles
 
 AWS_REGION=
