feat: add mail service

--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,7 @@ AWS_SECRET_ACCESS_KEY=
 AWS_PUBLIC_BUCKET_NAME=
 
 TWO_FACTOR_AUTHENTICATION_APP_NAME=Next_Starter_Template
+
+EMAIL_SERVICE=gmail
+EMAIL_USER=nestjs.application@gmail.com
+EMAIL_PASSWORD=password
