--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     "@nestjs/swagger": "^5.2.1",
     "@nestjs/terminus": "^8.0.6",
     "@nestjs/typeorm": "^8.0.3",
+    "@types/nodemailer": "^6.4.4",
     "aws-sdk": "^2.1128.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
+    "nodemailer": "^6.7.5",
     "otplib": "^12.0.1",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
