--- a/.env.example
+++ b/.env.example
@@ -19,7 +19,6 @@ JWT_ACCESS_TOKEN_EXPIRATION_TIME=900
 JWT_REFRESH_TOKEN_SECRET=da420ba16e69af32d47d2dd8ac01a77d
 JWT_REFRESH_TOKEN_EXPIRATION_TIME=28800
 
-EMAIL_CONFIRMATION_URL=https://my-app.com/confirm-email
 UPLOADED_FILES_DESTINATION=./uploadedFiles
 
 AWS_REGION=
@@ -29,6 +28,10 @@ AWS_PUBLIC_BUCKET_NAME=
 
 TWO_FACTOR_AUTHENTICATION_APP_NAME=Next_Starter_Template
 
-EMAIL_SERVICE=gmail
-EMAIL_USER=nestjs.application@gmail.com
+EMAIL_HOST=smtp.mailtrap.io
+EMAIL_PORT=2525
+EMAIL_IS_SECURE=false
+EMAIL_USER=user
 EMAIL_PASSWORD=password
+EMAIL_FROM=mailtrap@example.com
+EMAIL_CONFIRMATION_URL=http://localhost:5001/api/confirm-email
