feat: add google authentication module

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,8 @@ APP_URL=localhost
 SUPPORT_EMAIL=support@${APP_URL}
 PORT=5000
 
+UPLOADED_FILES_DESTINATION=./uploadedFiles
+
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
 DATABASE_USER=psqlroot
@@ -18,15 +20,18 @@ JWT_ACCESS_TOKEN_SECRET=fa420ba16c67af32d47d2bb8ac01a77d
 JWT_ACCESS_TOKEN_EXPIRATION_TIME=900
 JWT_REFRESH_TOKEN_SECRET=da420ba16e69af32d47d2dd8ac01a77d
 JWT_REFRESH_TOKEN_EXPIRATION_TIME=28800
+JWT_VERIFICATION_TOKEN_SECRET=7AnEd5epXmdaJfUrokkQ
+JWT_VERIFICATION_TOKEN_EXPIRATION_TIME=21600
 
-UPLOADED_FILES_DESTINATION=./uploadedFiles
+GOOGLE_AUTH_CLIENT_ID=
+GOOGLE_AUTH_CLIENT_SECRET=
+
+TWO_FACTOR_AUTHENTICATION_APP_NAME=Next_Starter_Template
 
 AWS_REGION=
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_PUBLIC_BUCKET_NAME=
-
-TWO_FACTOR_AUTHENTICATION_APP_NAME=Next_Starter_Template
 
 EMAIL_HOST=smtp.mailtrap.io
 EMAIL_PORT=2525
