--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
+    "googleapis": "^100.0.0",
     "nodemailer": "^6.7.5",
     "otplib": "^12.0.1",
     "passport": "^0.5.2",
