--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/nodemailer": "^6.4.4",
     "aws-sdk": "^2.1128.0",
     "bcrypt": "^5.0.1",
+    "cache-manager": "^3.6.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
@@ -61,6 +62,7 @@
     "@nestjs/schematics": "^8.0.11",
     "@nestjs/testing": "^8.4.4",
     "@types/bcrypt": "^5.0.0",
+    "@types/cache-manager": "^3.4.3",
     "@types/cookie-parser": "^1.4.3",
     "@types/cron": "^2.0.0",
     "@types/express": "^4.17.13",
