feat: add redis cache support

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ SUPPORT_EMAIL=support@${APP_URL}
 PORT=5000
 
 UPLOADED_FILES_DESTINATION=./uploadedFiles
+TWO_FACTOR_AUTHENTICATION_APP_NAME=Next_Starter_Template
 
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
@@ -23,16 +24,6 @@ JWT_REFRESH_TOKEN_EXPIRATION_TIME=28800
 JWT_VERIFICATION_TOKEN_SECRET=7AnEd5epXmdaJfUrokkQ
 JWT_VERIFICATION_TOKEN_EXPIRATION_TIME=21600
 
-GOOGLE_AUTH_CLIENT_ID=
-GOOGLE_AUTH_CLIENT_SECRET=
-
-TWO_FACTOR_AUTHENTICATION_APP_NAME=Next_Starter_Template
-
-AWS_REGION=
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_PUBLIC_BUCKET_NAME=
-
 EMAIL_HOST=smtp.mailtrap.io
 EMAIL_PORT=2525
 EMAIL_IS_SECURE=false
@@ -40,3 +31,14 @@ EMAIL_USER=user
 EMAIL_PASSWORD=password
 EMAIL_FROM=mailtrap@example.com
 EMAIL_CONFIRMATION_URL=http://localhost:5001/api/confirm-email
+
+REDIS_HOST=localhost
+REDIS_PORT=6379
+
+GOOGLE_AUTH_CLIENT_ID=
+GOOGLE_AUTH_CLIENT_SECRET=
+
+AWS_REGION=
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_PUBLIC_BUCKET_NAME=
