--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "aws-sdk": "^2.1128.0",
     "bcrypt": "^5.0.1",
     "cache-manager": "^3.6.3",
+    "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
