--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@nestjs/testing": "^8.4.4",
     "@types/bcrypt": "^5.0.0",
     "@types/cache-manager": "^3.4.3",
+    "@types/cache-manager-redis-store": "^2.0.1",
     "@types/cookie-parser": "^1.4.3",
     "@types/cron": "^2.0.0",
     "@types/express": "^4.17.13",
