feat: add docker compose setup

--- a/.env.example
+++ b/.env.example
@@ -10,9 +10,9 @@ TWO_FACTOR_AUTHENTICATION_APP_NAME=Next_Starter_Template
 
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
-DATABASE_USER=psqlroot
-DATABASE_PASSWORD=password
-DATABASE_NAME=nest_experiment
+DATABASE_USER=admin
+DATABASE_PASSWORD=admin
+DATABASE_NAME=nestjs
 
 TYPEORM_SYNCHRONIZE=true
 TYPEORM_LOGGING=true
