WIP: elastic search

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ PORT=5000
 
 UPLOADED_FILES_DESTINATION=./uploadedFiles
 TWO_FACTOR_AUTHENTICATION_APP_NAME=Next_Starter_Template
+FRONTEND_URL=http://localhost:5001
 
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
@@ -42,3 +43,7 @@ AWS_REGION=
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_PUBLIC_BUCKET_NAME=
+
+ELASTICSEARCH_NODE=http://localhost:9200
+ELASTICSEARCH_USERNAME=elastic
+ELASTICSEARCH_PASSWORD=admin
