--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@types/node": "^17.0.31",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
+    "@types/qrcode": "^1.4.2",
     "@types/supertest": "^2.0.12",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
