--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@elastic/elasticsearch": "^8.2.1",
+    "@nestjs/bull": "^0.5.5",
     "@nestjs/common": "^8.4.4",
     "@nestjs/config": "^2.0.0",
     "@nestjs/core": "^8.4.4",
@@ -36,15 +37,18 @@
     "@nestjs/swagger": "^5.2.1",
     "@nestjs/terminus": "^8.0.6",
     "@nestjs/typeorm": "^8.0.3",
-    "@types/nodemailer": "^6.4.4",
+    "adm-zip": "^0.5.9",
     "aws-sdk": "^2.1128.0",
     "bcrypt": "^5.0.1",
+    "bull": "^4.8.3",
     "cache-manager": "^3.6.3",
     "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
     "googleapis": "^100.0.0",
+    "imagemin": "^8.0.1",
+    "imagemin-pngquant": "^9.0.2",
     "nodemailer": "^6.7.5",
     "otplib": "^12.0.1",
     "passport": "^0.5.2",
@@ -64,15 +68,19 @@
     "@nestjs/cli": "^8.2.5",
     "@nestjs/schematics": "^8.0.11",
     "@nestjs/testing": "^8.4.4",
+    "@types/adm-zip": "^0.5.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/bull": "^3.15.8",
     "@types/cache-manager": "^3.4.3",
     "@types/cache-manager-redis-store": "^2.0.1",
     "@types/cookie-parser": "^1.4.3",
     "@types/cron": "^2.0.0",
     "@types/express": "^4.17.13",
+    "@types/imagemin": "^8.0.0",
     "@types/jest": "^27.5.0",
     "@types/multer": "^1.4.7",
     "@types/node": "^17.0.31",
+    "@types/nodemailer": "^6.4.4",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
     "@types/qrcode": "^1.4.2",
