--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
     "googleapis": "^100.0.0",
+    "helmet": "^5.1.0",
     "nodemailer": "^6.7.5",
     "otplib": "^12.0.1",
     "passport": "^0.5.2",
