--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,9 @@ APP_URL=localhost
 SUPPORT_EMAIL=support@${APP_URL}
 PORT=5000
 
+THROTTLE_TTL=60
+THROTTLE_LIMIT=10000
+
 UPLOADED_FILES_DESTINATION=./uploadedFiles
 TWO_FACTOR_AUTHENTICATION_APP_NAME=Next_Starter_Template
 FRONTEND_URL=http://localhost:5001
