--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@nestjs/schedule": "^2.0.1",
     "@nestjs/swagger": "^5.2.1",
     "@nestjs/terminus": "^8.0.6",
+    "@nestjs/throttler": "^2.0.1",
     "@nestjs/typeorm": "^8.0.3",
     "aws-sdk": "^2.1128.0",
     "bcrypt": "^5.0.1",
