--- a/package.json
+++ b/package.json
@@ -19,84 +19,86 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "documentation:serve": "npx @compodoc/compodoc -p tsconfig.json --serve"
+    "documentation:serve": "npx @compodoc/compodoc -p tsconfig.json --serve",
+    "deps:update": "taze major -I"
   },
   "dependencies": {
-    "@elastic/elasticsearch": "^8.2.1",
-    "@nestjs/bull": "^0.6.0",
-    "@nestjs/common": "^9.0.3",
-    "@nestjs/config": "^2.2.0",
-    "@nestjs/core": "^9.0.3",
-    "@nestjs/cqrs": "^9.0.1",
+    "@elastic/elasticsearch": "^8.6.0",
+    "@nestjs/bull": "^0.6.3",
+    "@nestjs/common": "^9.3.9",
+    "@nestjs/config": "^2.3.1",
+    "@nestjs/core": "^9.3.9",
+    "@nestjs/cqrs": "^9.0.3",
     "@nestjs/elasticsearch": "^9.0.0",
     "@nestjs/jwt": "^9.0.0",
-    "@nestjs/mapped-types": "^1.1.0",
-    "@nestjs/passport": "^9.0.0",
-    "@nestjs/platform-express": "^9.0.3",
-    "@nestjs/schedule": "^2.1.0",
-    "@nestjs/swagger": "^6.0.4",
-    "@nestjs/terminus": "^9.0.0",
-    "@nestjs/throttler": "^3.0.0",
-    "@nestjs/typeorm": "^9.0.0",
-    "aws-sdk": "^2.1176.0",
-    "bcrypt": "^5.0.1",
-    "bull": "^4.8.4",
+    "@nestjs/mapped-types": "^1.2.2",
+    "@nestjs/passport": "^9.0.3",
+    "@nestjs/platform-express": "^9.3.9",
+    "@nestjs/schedule": "^2.2.0",
+    "@nestjs/swagger": "^6.2.1",
+    "@nestjs/terminus": "^9.2.1",
+    "@nestjs/throttler": "^3.1.0",
+    "@nestjs/typeorm": "^9.0.1",
+    "aws-sdk": "^2.1329.0",
+    "bcrypt": "^5.1.0",
+    "bull": "^4.10.4",
     "cache-manager": "^4.1.0",
     "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
     "googleapis": "^105.0.0",
-    "helmet": "^5.1.0",
-    "nodemailer": "^6.7.7",
+    "helmet": "^5.1.1",
+    "nodemailer": "^6.9.1",
     "otplib": "^12.0.1",
     "passport": "^0.6.0",
-    "passport-jwt": "^4.0.0",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "pg": "^8.7.3",
+    "pg": "^8.10.0",
     "qrcode": "^1.5.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.5.6",
-    "swagger-ui-express": "^4.5.0",
-    "typeorm": "^0.3.7",
+    "rxjs": "^7.8.0",
+    "swagger-ui-express": "^4.6.2",
+    "taze": "^0.9.0",
+    "typeorm": "^0.3.12",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@compodoc/compodoc": "^1.1.19",
-    "@nestjs/cli": "^9.0.0",
-    "@nestjs/schematics": "^9.0.1",
-    "@nestjs/testing": "^9.0.3",
+    "@nestjs/cli": "^9.2.0",
+    "@nestjs/schematics": "^9.0.4",
+    "@nestjs/testing": "^9.3.9",
     "@types/bcrypt": "^5.0.0",
-    "@types/bull": "^3.15.8",
-    "@types/cache-manager": "^4.0.1",
+    "@types/bull": "^3.15.9",
+    "@types/cache-manager": "^4.0.2",
     "@types/cache-manager-redis-store": "^2.0.1",
     "@types/cookie-parser": "^1.4.3",
     "@types/cron": "^2.0.0",
-    "@types/express": "^4.17.13",
-    "@types/jest": "^28.1.6",
+    "@types/express": "^4.17.17",
+    "@types/jest": "^28.1.8",
     "@types/multer": "^1.4.7",
-    "@types/node": "^18.0.5",
-    "@types/nodemailer": "^6.4.4",
-    "@types/passport-jwt": "^3.0.6",
-    "@types/passport-local": "^1.0.34",
-    "@types/qrcode": "^1.4.2",
+    "@types/node": "^18.14.6",
+    "@types/nodemailer": "^6.4.7",
+    "@types/passport-jwt": "^3.0.8",
+    "@types/passport-local": "^1.0.35",
+    "@types/qrcode": "^1.5.0",
     "@types/supertest": "^2.0.12",
     "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.30.6",
-    "@typescript-eslint/parser": "^5.30.6",
-    "eslint": "^8.20.0",
-    "eslint-config-prettier": "^8.5.0",
+    "@typescript-eslint/eslint-plugin": "^5.54.1",
+    "@typescript-eslint/parser": "^5.54.1",
+    "eslint": "^8.35.0",
+    "eslint-config-prettier": "^8.7.0",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^28.1.3",
-    "prettier": "^2.7.1",
+    "prettier": "^2.8.4",
     "source-map-support": "^0.5.21",
-    "supertest": "^6.2.4",
-    "ts-jest": "^28.0.7",
-    "ts-loader": "^9.3.1",
+    "supertest": "^6.3.3",
+    "ts-jest": "^28.0.8",
+    "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.0.0",
-    "typescript": "^4.7.4"
+    "tsconfig-paths": "^4.1.2",
+    "typescript": "^4.9.5"
   },
   "jest": {
     "moduleFileExtensions": [
